Fixed calendar cut off by hidden overflow

--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -47,7 +47,7 @@ $dark: #343944;
 .main-content {
     height: calc(100% - 60px);
     margin: 30px;
-    overflow: hidden;
+    overflow: auto;
     .scrollable-content,
     .scrollable-content.collapsed {
         overflow: auto;
